--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Douglasghs/Web-Scraping-Node#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.3",
     "http": "0.0.1-security",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
